# exchange-bot

./: Cargo.toml
.github/: CODEOWNERS
.github/workflows/: backend.yaml
service/: Cargo.toml
src/: lib.rs  main.rs
src/app/: Cargo.toml
src/app/src/: main.rs
src/exchanges/: bitrue.rs  lbank.rs  mod.rs
src/exchanges/bitrue/: Cargo.toml
src/exchanges/bitrue/src/: client.rs  lib.rs  subscriber.rs
src/exchanges/lbank/: Cargo.toml
src/exchanges/lbank/src/: client.rs  lib.rs  subscriber.rs
src/order_executor/: Cargo.toml
src/order_executor/src/: lib.rs
src/processors/arb_finder/: Cargo.toml
src/processors/arb_finder/src/: lib.rs
src/processors/cashout/: Cargo.toml
src/processors/cashout/src/: lib.rs
src/subscriber/: Cargo.toml
src/subscriber/src/: lib.rs
src/types/: Cargo.toml
src/types/src/: lib.rs
