[package]
name = "exchange-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.81"
ezsockets = { version = "0.6.3", features = ["rustls"] }
futures = "0.3.30"
tokio = { version = "1.39.2", features = ["full"] }
tokio-util = "0.7.11"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
