[workspace]
members = [
    "src/app",
    "src/exchanges/bitrue",
    "src/exchanges/lbank",
    "src/subscriber",
    "src/types"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
async-trait = "0.1.81"
ezsockets = { version = "0.6.3", features = ["rustls"] }
flate2 = "1.0.31"
futures = "0.3.30"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
test-case = "3.3.1"
tokio = { version = "1.39.2", features = ["full"] }
tokio-util = "0.7.11"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
