[package]
name = "xb-app"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
xb-arb-finder.path = "../processors/arb_finder"
xb-cashout.path = "../processors/cashout"
xb-subscriber.path = "../subscriber"
xb-types.path = "../types"
