[package]
name = "xb-app"
version.workspace = true
edition.workspace = true

[dependencies]
dotenv.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
xb-arb-finder.path = "../processors/arb_finder"
xb-cashout.path = "../processors/cashout"
xb-exchanges-bitrue.path = "../exchanges/bitrue"
xb-exchanges-lbank.path = "../exchanges/lbank"
xb-order-executor.path = "../order_executor"
xb-subscriber.path = "../subscriber"
xb-types.path = "../types"
