[package]
name = "xb-exchanges-bitrue"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
ezsockets.workspace = true
flate2.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
xb-types.path = "../../types"
