[package]
name = "xb-exchanges-lbank"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
ezsockets.workspace = true
hex.workspace = true
hmac.workspace = true
md5.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
xb-types.path = "../../types"